# ignore

./: .gitignore  .gitlab-ci.yml  .vale.ini  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  TODOS.md  bom.spdx.json  cliff.toml  config.toml.example  gitignore  post-commit  post-push  trivy.yaml
src/: app.rs  config.rs  errors.rs  git.rs  main.rs  utils.rs
src/config/: cli.rs  config.rs  config_file.rs  configs.rs  logger.rs  mod.rs  options.rs  runtime.rs  setup.rs  state.rs  utils.rs
