[package]
name = "ignore"
version = "1.5.8"
# documentation
authors = ["fisherprime <mbock.ernie40@protonmail.ch>"]
description = "A .gitignore file generator."
edition = "2018"
# homepage
license = "MIT"
repository = "https://gitlab.com/fisherprime/ignore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["cargo"] }
clap_complete = "4"
dirs-next = "2.0"
fern = "0.6"
git2 = "0.16"
lazy_static = "1.4.0" # For lazily (only one) evaluated statics.
log = "0.4"
rayon = "1.6.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
